Fixed spacing
Fixed header spacing to be left aligned with the border.

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -204,7 +204,7 @@ aside {
   z-index: 2;
   nav {
     float: center;
-    max-width: 500px;
+    max-width: 50%;
     margin-left: auto;
     margin-right: auto;
     ul {
